# ConfigTemplate

./: README.md  config.toml  config_env_mapping.toml  pyproject.toml
myapp/config/: __init__.py  models.py
